Use 1200px version of price

--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
   <title>Test site for Kate</title>
   <link rel = 'stylesheet' type='text/css' href='style.css'>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-	<img src="price.png">
+	<img src="price1200.png">
 </body>
 </html> 
