--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Test site for Kate</title>
+  <title>Timeless Lounge Kudrovo</title>
   <link rel = 'stylesheet' type='text/css' href='style.css'>
 </head>
 <body>
